# WHITeN

./: .gitignore  README.md  pyproject.toml  run_desktop.bat  run_server.py
.qt_for_python/uic/: base.py
assistant/: __main__.py  ai2.rive  ai_m2.py  constants.py  newreplies.rive  wapp.html
assistant/gui/: base.py  base.ui  window.py
assistant/term/: term_curses.py  terminal.py
server/: ai_m2.py  server.py  wapp.html
