[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
rivescript = "^1.15.0"
wikipedia = "^1.4.0"
google = "^3.0.0"
pyowm = "^3.2.0"
PySide6 = "^6.2.1"
markdown = "^3.3.4"
jokeapi = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
